fix: autloplay home video on iOS

--- a/src/components/FitbarList/fitbar.css
+++ b/src/components/FitbarList/fitbar.css
@@ -9,7 +9,7 @@
 
 .float-cart {
   position: fixed;
-  bottom: 2rem;
+  bottom: 0.7rem;
   right: 1rem;
   
 }
